--- a/foundation/assets/custom/index.css
+++ b/foundation/assets/custom/index.css
@@ -9,77 +9,6 @@
      font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
      color: white;
 }
-/* styles the header */
- .header{
-     background: url(../media/images/pic.jpg);
-     background-repeat: no-repeat;
-     background-size: cover;
-     text-align: center;
-     height: 350px;
-     padding: 20px;
- }
- /* styles the navigation */
- .navigation {   
-     margin: 70px auto;
-     max-width: 800px;
-     padding: 20px 12px 10px 20px;
- }
-
- ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(62, 78, 17);
-}
-
-li {
-    float: left;
-}
-
-li a,
-.dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover,
-.dropdown:hover .dropbtn {
-    background-color: rgb(178, 184, 190);
-}
-
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
  /* styling the columns */
 
 .column {
@@ -132,13 +61,6 @@ li.dropdown {
 }
 #trans:hover {
     background-image:url(../media/images/1e.jpg);
-}
-/* image styling with opacity of 0.5*/
-
-img {
-    border-radius: 8px;
-    opacity: 0.5;
-    filter: alpha(opacity=50);
 }
 
 /* hover rotation transformation */
@@ -246,20 +168,6 @@ img {
         transform:rotate(360deg);
     }
 }
-
-/* search */
-input[type=text] {
-    width: 60%;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-position: 10px 10px; 
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-}
-
 /* boxshadow */
 #boxshadow{
     box-shadow: 10px 10px 5px grey;
@@ -379,4 +287,76 @@ input[type=text] {
 img .responsiveimage{
     width: 100%;
     height: auto;
+}
+/* foundation css */
+.no-js .top-bar {
+  display: none;
+}
+
+@media screen and (min-width: 40em) {
+  .no-js .top-bar {
+    display: block;
+  }
+
+  .no-js .title-bar {
+    display: none;
+  }
+}
+/* foundation image */
+.orbit-figure img{
+    height:700px;
+    width:100%;
+    object-fit: cover;
+}
+.orbit-container {
+  position: relative;
+  height: 500px;
+}
+.orbit-caption {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%; 
+  background-color: rgba(10, 10, 10, 0.9);
+}
+.orbit-caption p {
+	position: relative;
+	top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+	text-align: center;
+	color: #fefefe;
+  font-size: 48px;
+  font-weight: 900;	
+}
+@media screen and (max-width: 39.9375em) {
+.orbit-caption p{
+  font-size: 12px;
+  font-weight: 400;
+ }    
+}
+
+.orbit-bullets {
+   display: none;
+}
+/* change id for image */
+.media-object-section img{
+    height: 300px;
+    width: auto;
+}
+
+/* Small line  */
+.line{
+    width: 22px;
+    height: 47px;
+    border-bottom: 3px solid black;
+    position: absolute;
+}
+/* margine for media-object */
+
+#media{
+    padding-left: 200px;
+    padding-right: 200px;
 }
